--- a/vinculo.html
+++ b/vinculo.html
@@ -17,12 +17,12 @@
 
     <!--Secciones con Anclas-->
     <section id="sección1">
-        <h2>Sección 1</h2>
+        <h2>Sección 1A</h2>
         <p>N° de Ficha: 3142101</p>
     </section>
 
     <section id="sección2">
-        <h2>Sección 2</h2>
+        <h2>Sección 2A</h2>
         <p>Correo: arciniegasfk303@gmail.com</p>
     </section>
 </body>
