--- a/index.html
+++ b/index.html
@@ -15,5 +15,10 @@
     <h1>Página Principal</h1>
     <p>Bienvenido a la página principal. Puedes ir a la página secundaria haciendo clic en el siguiente enlace:</p>
     <a href="pagina_secundaria.html">Ir a la Página Secundaria</a>
+    <br>
+    <h2>Datos</h2>
+    <h3>Katherin</h3>
+    <h4>Fernández Arciniegas</h4>
+    <h5>3206537148</h5>
 </body>
 </html>
