--- a/vinculo.html
+++ b/vinculo.html
@@ -24,6 +24,7 @@
     <section id="sección2">
         <h2>Sección 2A</h2>
         <p>Correo: arciniegasfk303@gmail.com</p>
+        nhhh
     </section>
 </body>
 </html>
