--- a/pagina_secundaria.html
+++ b/pagina_secundaria.html
@@ -13,6 +13,8 @@
 </head>
 <body>
     <h1>Página Secundaria</h1>
+    <p>Contenido página secundaria.</p>
+    <br>
     <p>Estás en la página secundaria. Puedes volver a la página principal haciendo clic en el siguiente enlace:</p>
     <a href="index.html">Volver a la Página Principal</a>
 </body>
