--- a/index.html
+++ b/index.html
@@ -20,5 +20,7 @@
     <h3>Katherin</h3>
     <h4>Fernández Arciniegas</h4>
     <h5>3206537148</h5>
+    <br>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facere iusto maiores quaerat unde error vel accusantium, voluptate perspiciatis fuga quas aperiam, porro, provident repellendus cum soluta dolor ab sit hic.</p>
 </body>
 </html>
